manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-metrics-experiment
  labels:
    app: custom-metrics-experiment
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: custom-metrics-experiment
  sessionAffinity: None
  type: ClusterIP
