manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  name: custom-metrics-experiment
  labels:
    app: custom-metrics-experiment
spec:
  ingressClassName: nginx
  rules:
  - host: # Enter your hostname here
    http:
      paths:
      - backend:
          service:
            name: custom-metrics-experiment
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - # Enter your hostname here
    secretName: custom-metrics-experiment-tls
